# Record-collection

./: .gitignore  README.md  main.py  pyproject.toml
data/: .~lock.discogs.csv#
schemas/: input_csv_schema.py
utils/: create_columns.py
utils/test/: test_create_columns.py  test_data.py
