[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["hiroji <joegilbertdev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.21.0"
ruff = "^0.9.6"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
